# apache-airflow-mcp-server

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow_local/config/: airflow.cfg
server/: main.py
server/services/: airflow_client.py
server/tools/: assets.py  backfills.py  connections.py  dags.py  register_tools.py  tasks_instance.py
